kubernetes/base/console/pezzo-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./proxy.yaml
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: llm-ops-pezzo-console
  name: llm-ops-pezzo-console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: llm-ops-pezzo-console
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./proxy.yaml
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/dp-llm-ops-default: "true"
        io.kompose.service: llm-ops-pezzo-console
    spec:
      containers:
        - env:
            - name: NX_BASE_API_URL
              valueFrom:
                configMapKeyRef:
                  key: NX_BASE_API_URL
                  name: llm-ops-console-env
            - name: NX_DEBUG_MODE
              valueFrom:
                configMapKeyRef:
                  key: NX_DEBUG_MODE
                  name: llm-ops-console-env
            - name: NX_SUPERTOKENS_API_DOMAIN
              valueFrom:
                configMapKeyRef:
                  key: NX_SUPERTOKENS_API_DOMAIN
                  name: llm-ops-console-env
            - name: NX_SUPERTOKENS_WEBSITE_DOMAIN
              valueFrom:
                configMapKeyRef:
                  key: NX_SUPERTOKENS_WEBSITE_DOMAIN
                  name: llm-ops-console-env
          image: llm-ops-console:latest
          name: llm-ops-console
          ports:
            - containerPort: 4200
              hostPort: 4200
              protocol: TCP
      restartPolicy: Always
