kubernetes/base/console/pezzo-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./proxy.yaml
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: llm-ops-pezzo-console
  name: llm-ops-pezzo-console
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 8080
  selector:
    io.kompose.service: llm-ops-pezzo-console
