kubernetes/base/console/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-ops-console-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:226604077721:certificate/6b062dcc-c020-4580-bee0-34fd5a6a23a8
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/tags: Env=development,Cost=smartnews,System=realtime-streaming,Component=llm-ops-console,Team=Data-Platform-SH
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    external-dns.alpha.kubernetes.io/hostname: llm-ops.dev.smartnews.net
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/auth-session-timeout: '86400'
spec:
  rules:
    - host: llm-ops.dev.smartnews.net
      http:
        paths:
#          - path: /api/v1/webhook/
#            pathType: Prefix
#            backend:
#              service:
#                name: test-dp-flink-platform-backend
#                port:
#                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-ops-console
                port:
                  number: 4200
